# marco_polo

./: -  .gitignore  Cargo.toml  GEMINI.md  README.md  plan.md  test_custom.mmd
.github/commands/: gemini-review.toml
.jules/: bolt.md
src/: main.rs  mermaid.rs  models.rs  scanner.rs
src/parsers/: cpp.rs  java.rs  mod.rs  python.rs  ruby.rs
tests/cpp/: Animals.cpp  ComplexSystem.cpp
tests/java/: Animals.java  ComplexSystem.java
tests/python/: animals.py  complex_system.py  ignore_me.txt
tests/ruby/: animals.rb  complex_system.rb
