[package]
name = "marco-polo"
version = "0.5.0"
authors = ["Waldomiro Seabra <wjuan.06@gmail.com>"]
edition = "2021"
description = "A CLI tool to cartograph codebases and generate Mermaid.js diagrams."
license = "MIT"
repository = "https://github.com/wseabra/marco_polo"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
ignore = "0.4"
tree-sitter = "0.20"
tree-sitter-python = "~0.20.4"
tree-sitter-java = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-ruby = "0.20"
